HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeOutsideWrite/Expected.uv
//! Expected diagnostic metadata for the SpeculativeOutsideWrite rejected-source specimen.

expectedDiagnostic("E-CON-0091", "rule.19.K-Spec-Pure-Body")
